# zbit

./: README.md
ZBIT/: CITATION.cff  LICENSE  MIT License.txt  README.md  arXiv_metadata.json  demo pesado.py  demo pesado2.py  demo.py  license.txt  pyproject.toml  requirements.txt  setup.py  zbit_core_v2_FIXED.py
ZBIT/demo_leve_results/: relatorio_rapido.txt
ZBIT/docs/: ARCHITECTURE.md  EMERGENCY-FIX.md  INSTALLATION_GUIDE.md  TEST_PLAN.md  WEEK1-SUMMARY.md  WEEK2-COMPLETE.md  ZBIT-executive-summary.md  ZBIT-implementation.md  ZBIT-roadmap.md
ZBIT/examples/: demo.ipynb
ZBIT/paper/: Imagens - Atalho.lnk  ZBIT_CORE_v2.tex
ZBIT/tests/: conftest.py  test_suite_FIXED.py
