[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zbit-framework"
version = "1.0.0-alpha.1"
description = "ZBIT: Anomalous Quantum Computing Framework - Simulates speculative CERN quantum physics principles"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ZBIT Research Team", email = "info@zbit-framework.dev"}
]
keywords = [
    "quantum-computing",
    "error-correction",
    "anomalous-physics",
    "zbit",
    "cern",
    "retrocausal",
    "anomaly-detection"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.20",
    "dataclasses-json>=0.5.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=23.0",
    "pylint>=2.15",
    "mypy>=1.0",
    "isort>=5.11",
    "flake8>=5.0",
]
web = [
    "fastapi>=0.95",
    "uvicorn[standard]>=0.20",
    "pydantic[email]>=2.0",
]
viz = [
    "matplotlib>=3.5",
    "plotly>=5.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]
full = [
    "zbit-framework[dev,web,viz,docs]",
]

[project.urls]
Homepage = "https://github.com/zbit-research/zbit-framework"
Documentation = "https://zbit-framework.readthedocs.io"
Repository = "https://github.com/zbit-research/zbit-framework.git"
"Bug Tracker" = "https://github.com/zbit-research/zbit-framework/issues"

[project.scripts]
zbit = "zbit.cli.commands:main"

[tool.setuptools]
packages = ["zbit"]
include-package-data = true

[tool.setuptools.package-data]
zbit = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=zbit --cov-report=term-missing --cov-report=html --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
norecursedirs = [".git", ".tox", "dist", "build"]

[tool.coverage.run]
branch = true
source = ["zbit"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pylint."messages control"]
disable = [
    "C0111",
    "R0913",
    "R0914",
    "W0212",
]
